tests/ui/image/query/query_levels_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0>: HasQueryLevels` is not satisfied
   --> $DIR/query_levels_err.rs:12:15
    |
12  |     *output = image.query_levels();
    |               ^^^^^ ------------ required by a bound introduced by this call
    |               |
    |               the trait `HasQueryLevels` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0>`
    |
    = help: the following other types implement trait `HasQueryLevels`:
              Image<SampledType, 0, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>
              Image<SampledType, 1, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>
              Image<SampledType, 2, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>
              Image<SampledType, 3, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>::query_levels`
   --> $SPIRV_STD_SRC/image.rs:821:15
    |
821 |         Self: HasQueryLevels,
    |               ^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT>::query_levels`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
